# agent-memory

./: .gitignore  README.md  pyproject.toml
agent_memory/: __init__.py  conversation.py  embeddings.py  kv.py  memory.py  models.py  vector.py
agent_memory/backends/: __init__.py  base.py  memory_backend.py  sqlite_backend.py
tests/: test_backends.py  test_conversation.py  test_kv.py  test_vector.py
