[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Persistent memory layer for LLM agents — vector store, conversation history, and key-value state with pluggable backends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Muhammad Rashid", email = "muhammadrashid4587@gmail.com" },
]
keywords = ["llm", "agent", "memory", "vector-store", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/muhammadrashid4587/agent-memory"
Repository = "https://github.com/muhammadrashid4587/agent-memory"
Issues = "https://github.com/muhammadrashid4587/agent-memory/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory"]
